expected/main/core/bitdata/fromBits-neg3.err
ERROR: "actual/main/core/bitdata/fromBits-neg3.lc", line 6
external r1 {primBitToBitdata 30 R1} :: Bit 30 -> R1
         ^
No generated implementation: Bitdata type R1 has restricted (reference) fields

ERROR: "actual/main/core/bitdata/fromBits-neg3.lc", line 10
external r2 {primBitToBitdata 30 R2} :: Bit 30 -> R2
         ^
No generated implementation: Bitdata type R2 has restricted (reference) fields

ERROR: Aborting after 2 previously reported errors

